--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* div {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center; 
+} */
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
